Trabajo en menu principal

--- a/Sistema Chachi Guay/Sistema Chachi Guay.csproj
+++ b/Sistema Chachi Guay/Sistema Chachi Guay.csproj
@@ -93,5 +93,17 @@
   <ItemGroup>
     <None Include="images\Portada.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Book.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\PopCorn.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\TV.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Games.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
