--- a/Sistema Chachi Guay/Sistema Chachi Guay.csproj
+++ b/Sistema Chachi Guay/Sistema Chachi Guay.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Juegos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Juegos.Designer.cs">
+      <DependentUpon>Juegos.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuCentral.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Juegos.resx">
+      <DependentUpon>Juegos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuCentral.resx">
       <DependentUpon>MenuCentral.cs</DependentUpon>
