--- a/Sistema Chachi Guay/Sistema Chachi Guay.csproj
+++ b/Sistema Chachi Guay/Sistema Chachi Guay.csproj
@@ -45,11 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AjusteEstado.cs">
+    <Compile Include="AjusteExtra.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AjusteEstado.Designer.cs">
-      <DependentUpon>AjusteEstado.cs</DependentUpon>
+    <Compile Include="AjusteExtra.Designer.cs">
+      <DependentUpon>AjusteExtra.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AjusteGenero.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AjusteGenero.Designer.cs">
+      <DependentUpon>AjusteGenero.cs</DependentUpon>
     </Compile>
     <Compile Include="Ajustes.cs">
       <SubType>Form</SubType>
@@ -69,11 +75,23 @@
     <Compile Include="AjusteUsuario.Designer.cs">
       <DependentUpon>AjusteUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Anime.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Anime.Designer.cs">
+      <DependentUpon>Anime.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Humanos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Humanos.Designer.cs">
+      <DependentUpon>Humanos.cs</DependentUpon>
     </Compile>
     <Compile Include="Juegos.cs">
       <SubType>Form</SubType>
@@ -81,11 +99,29 @@
     <Compile Include="Juegos.Designer.cs">
       <DependentUpon>Juegos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Libros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Libros.Designer.cs">
+      <DependentUpon>Libros.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manga.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manga.Designer.cs">
+      <DependentUpon>Manga.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuCentral.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MenuCentral.Designer.cs">
       <DependentUpon>MenuCentral.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Peliculas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Peliculas.Designer.cs">
+      <DependentUpon>Peliculas.cs</DependentUpon>
     </Compile>
     <Compile Include="Pendientes.cs">
       <SubType>Form</SubType>
@@ -95,12 +131,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SeleccionJuegos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SeleccionJuegos.Designer.cs">
-      <DependentUpon>SeleccionJuegos.cs</DependentUpon>
-    </Compile>
     <Compile Include="SeleccionLibros.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,16 +143,10 @@
     <Compile Include="SeleccionSerie.Designer.cs">
       <DependentUpon>SeleccionSerie.cs</DependentUpon>
     </Compile>
-    <Compile Include="SeleccionPeliculas.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SeleccionPeliculas.Designer.cs">
-      <DependentUpon>SeleccionPeliculas.cs</DependentUpon>
-    </Compile>
     <Compile Include="SQL.cs" />
     <Compile Include="Util.cs" />
-    <EmbeddedResource Include="AjusteEstado.resx">
-      <DependentUpon>AjusteEstado.cs</DependentUpon>
+    <EmbeddedResource Include="AjusteGenero.resx">
+      <DependentUpon>AjusteGenero.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ajustes.resx">
       <DependentUpon>Ajustes.cs</DependentUpon>
@@ -133,14 +157,29 @@
     <EmbeddedResource Include="AjusteUsuario.resx">
       <DependentUpon>AjusteUsuario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Anime.resx">
+      <DependentUpon>Anime.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Humanos.resx">
+      <DependentUpon>Humanos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Juegos.resx">
       <DependentUpon>Juegos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Libros.resx">
+      <DependentUpon>Libros.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manga.resx">
+      <DependentUpon>Manga.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuCentral.resx">
       <DependentUpon>MenuCentral.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Peliculas.resx">
+      <DependentUpon>Peliculas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pendientes.resx">
       <DependentUpon>Pendientes.cs</DependentUpon>
@@ -155,17 +194,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SeleccionJuegos.resx">
-      <DependentUpon>SeleccionJuegos.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="SeleccionLibros.resx">
       <DependentUpon>SeleccionLibros.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SeleccionSerie.resx">
       <DependentUpon>SeleccionSerie.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SeleccionPeliculas.resx">
-      <DependentUpon>SeleccionPeliculas.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
