--- a/Sistema Chachi Guay/App.config
+++ b/Sistema Chachi Guay/App.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Sistema_Chachi_Guay.Properties.Settings.ConexionBibliotecaBDD"
+            connectionString="Data Source=VLADIMIR;Initial Catalog=bd_biblioteca;Persist Security Info=True;User ID=sa;Password=crislyn"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
